--- a/package.json
+++ b/package.json
@@ -56,15 +56,6 @@
     "com.ionic.keyboard",
     "org.apache.cordova.device",
     "org.apache.cordova.console",
-    "com.ionic.keyboard",
-    "org.apache.cordova.device",
-    "org.apache.cordova.console",
-    "org.apache.cordova.console",
-    "com.ionic.keyboard",
-    "org.apache.cordova.console",
-    "org.apache.cordova.console",
-    "com.ionic.keyboard",
-    "org.apache.cordova.device",
-    "org.apache.cordova.device"
+    "com.ionic.keyboard"
   ]
 }
